# s3_simple_compress

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pytest.yml
docs/: 01_tutorial.md  02_contribute.md  index.md  requirements.txt
docs/api/: zipping_s3.md
docs/stylesheets/: extra.css
docs/templates/: basic.md  cards.html  install.md
s3_compress/: copy_zipping_s3.py  zipping_s3.py
tests/: zip_s3_test.py
