[tool.poetry]
name = "s3-compress"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "s3_compress"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.125"
rich = "^13.3.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
taskipy = "^1.10.4"


[tool.poetry.group.doc.dependencies]
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^0.9.0"
mkdocs-material = "^9.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
