[tool.poetry]
name = "s3-compress"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "s3_compress"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = ">=1.25.0,<1.26.98"
rich = "^13.3.5"
ipywidgets = "^8.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
taskipy = "^1.10.4"
localstack = "^2.0.2"
awscli-local = "^0.20"
awscli = "^1.27.126"


[tool.poetry.group.doc.dependencies]
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^0.9.0"
mkdocs-material = "^9.1.9"
mkdocs-macros-plugin = "^0.7.0"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
check_code = "blue --check --diff ."
fix_code = "blue ."
docs = "mkdocs serve"
pre_test = "task check_code && localstack start -d"
test = "pytest -vv --cov=."
post_test = "localstack stop && coverage html"
see_cov = "firefox htmlcov/index.html"
run = "python s3_compress/zipping_s3.py"