[tool.poetry]
name = "s3-simple-compress"
version = "0.1.1"
description = "Documentation for AWS S3 In-Memory File Compression (zip) Program "
license = "MIT"
authors = ["Bruno Mesquita <bruno.mesquita2707@gmail.com>"]
readme = "README.md"
packages = [{include = "s3_compress"}]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Framework :: AWS CDK",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Education :: Testing"
]

[tool.poetry.urls]
"Documentação" = "https://s3-simple-compress.readthedocs.io/en/latest/"
"Código" = "https://github.com/BrunoMesquitaa/s3_simple_compress"
"Bug Tracker" = "https://github.com/BrunoMesquitaa/s3_simple_compress/issues"


[tool.poetry.dependencies]
python = "^3.11"
boto3 = ">=1.25.0,<1.26.98"
rich = "^13.3.5"
ipywidgets = "^8.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
taskipy = "^1.10.4"
localstack = "^2.0.2"
awscli-local = "^0.20"
awscli = "^1.27.126"


[tool.poetry.group.doc.dependencies]
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^0.9.0"
mkdocs-material = "^9.1.9"
mkdocs-macros-plugin = "^0.7.0"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
check_code = "blue --check --diff ."
fix_code = "blue ."
docs = "mkdocs serve"
pre_test = "task check_code && localstack start -d"
test = "pytest -vv --cov=."
post_test = "localstack stop && coverage html"
see_cov = "firefox htmlcov/index.html"